Recreate 1.21.1 on 1.20.1